--- a/backend/package.json
+++ b/backend/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "node src/index.js",
     "dev": "nodemon src/index.js",
-    "build": "echo 'No build step required'"
+    "build": "npm install"
   },
   "dependencies": {
     "bip39": "^3.1.0",
