--- a/frontend/package.json
+++ b/frontend/package.json
@@ -42,6 +42,9 @@
     "typescript": "^5.3.3"
   },
   "devDependencies": {
+    "@types/crypto-js": "^4.2.2",
+    "@types/hdkey": "^2.1.0",
+    "@types/qrcode": "^1.5.5",
     "eslint": "^8.56.0",
     "eslint-config-next": "14.0.4",
     "tailwindcss-animate": "^1.0.7"
